fix display overflow

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ html, body {
     min-width: 400px;
     max-width: 400px;
     min-height: 500px;
-    max-height: 500px;
     border:1px solid black;
     background-color: #121836;
     border-radius: 20px;
@@ -22,7 +21,6 @@ html, body {
     display: block;
     padding: 10px;
     min-height: 80px;
-    max-height: 80px;
     width: auto;
     background-color: black;
     align-content: center;
@@ -38,6 +36,8 @@ html, body {
     font-size: 40px;
     line-height: 50px;
     min-height: 50px;
+    max-width: 380px;
+    overflow: hidden;
     vertical-align: middle;
     
 }
